# academy

challenges/: README.md
challenges/challenge_map/: challenge_map.sdf
challenges/challenge_map/challenge_map/: challenge_map.sdf  model.config
challenges/navigation_waypoints_action/: README.md
environment_setup/: README.md  daily_workflow.md  docker_setup.md  gcp_connect.md  gcp_vm_setup.md
exercises/: environment_setup.md
exercises/autonomous_navigation/: exercise.md
exercises/navigation_waypoints_action/navwaypoints_client/: package.xml  setup.cfg  setup.py
exercises/navigation_waypoints_action/navwaypoints_interfaces/: package.xml
exercises/navigation_waypoints_action/navwaypoints_interfaces/action/: NavigateWaypoints.action
exercises/navigation_waypoints_action/navwaypoints_server/: package.xml  setup.cfg
exercises/navigation_waypoints_action/navwaypoints_server/navwaypoints_server/: navwaypoints_server.py
exercises/navigation_waypoints_action/src/navwaypoints_client/navwaypoints_client/: navwaypoints_client.py
exercises/navigation_waypoints_action/src/navwaypoints_interfaces/: CMakeLists.txt
exercises/navigation_waypoints_action/src/navwaypoints_server/: setup.py
exercises/obstacle_notification/: exercise.md
