<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navwaypoints_client</name>
  <version>0.0.0</version>
  <description>Navwaypoints client for Linorobot X Garage@EEE Autonomous Robotics Bootcamp 25/26 competition</description>
  <maintainer email="mingjiehu5@gmail.com">humjie</maintainer>
  <license>Apache License, Version 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>rclpy_action</depend>
  <depend>geometry_msgs</depend>
  <depend>navwaypoints_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
